<resources>
    <string name="app_name">河南走势图</string>

    <string name="loading">加载中…</string>
    <string name="user_logo">USER_LOGO</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_pwd_hint">6-16位,数字+字母(不区分大小写)</string>
    <string name="forget_pwd">忘记密码 ></string>
    <string name="login">登录</string>
    <string name="account_register">账号注册 ></string>
    <string name="account">账号</string>
    <string name="password">密码</string>
</resources>
